Fix mobile starting zoom, fix element misalignment, attempting hash browser link fix

--- a/frontend/src/styles/stylesheet.scss
+++ b/frontend/src/styles/stylesheet.scss
@@ -356,6 +356,9 @@ $button-black-opaque: #2125297e;
     align-items: center;
     justify-content: space-evenly !important;
   }
+  .aboutUs {
+    margin: 4px !important;
+  }
   .aboutUsUnder {
     max-width: 10em !important;
     margin: 4px;
